compositor: initialization code, basic event handling

--- a/meson.build
+++ b/meson.build
@@ -9,9 +9,10 @@ project('waywall', 'c',
 
 add_project_arguments(
   [
+    '-DWLR_USE_UNSTABLE',
     '-Wno-unused-parameter',
   ],
-  language: 'c',
+  language : 'c',
 )
 
 wlroots_subproject = subproject(
@@ -24,6 +25,7 @@ if not wlroots_subproject.get_variable('features').get('xwayland')
   error('xwayland is required')
 endif
 
+wayland_client = dependency('wayland-client')
 wayland_server = dependency('wayland-server')
 wayland_protocols = dependency('wayland-protocols')
 wayland_scanner = dependency('wayland-scanner', native: true)
@@ -35,11 +37,35 @@ if get_option('buildtype').startswith('debug')
   add_project_arguments('-DDEBUG', language : 'c')
 endif
 
+wl_scanner = find_program(wayland_scanner.get_variable('wayland_scanner'), native: true)
+wl_proto_dir = wayland_protocols.get_variable('pkgdatadir')
+wl_proto_xml = []
+
+wl_proto_header = []
+wl_proto_src = []
+foreach proto : wl_proto_xml
+  wl_proto_header += custom_target(
+    proto.underscorify() + '-header',
+    input: proto,
+    output: '@BASENAME@-protocol.h',
+    command: [wl_scanner, 'client-header', '@INPUT@', '@OUTPUT@'],
+  )
+  wl_proto_src += custom_target(
+    proto.underscorify() + '-src',
+    input: proto,
+    output: '@BASENAME@.c',
+    command: [wl_scanner, 'private-code', '@INPUT@', '@OUTPUT@'],
+  )
+endforeach
+
 executable('waywall',
+  wl_proto_src, wl_proto_header,
+  'compositor.c', 'compositor.h',
   'main.c',
 
-  dependencies: [
+  dependencies : [
     wlroots,
+    wayland_client,
     wayland_server,
     xkbcommon,
   ],
