--- a/meson.build
+++ b/meson.build
@@ -67,7 +67,7 @@ executable('waywall',
   wl_proto_src, wl_proto_header,
   'compositor.c', 'compositor.h',
   'util.c', 'util.h',
-  'main.c',
+  'waywall.c',
 
   dependencies : [
     wlroots,
