--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ endforeach
 executable('waywall',
   wl_proto_src, wl_proto_header,
   'compositor.c', 'compositor.h',
+  'config.c', 'config.h',
   'util.c', 'util.h',
   'waywall.c',
 
