waywall: implement basic functionality correctly
I would split this up into smaller commits like a good developer but I
already did a little git oopsie and lost this whole changeset. So I'm
not doing that again.

Implemented hotkey detection (atum, worldpreview, fullscreen)
Implemented keybind system
Implemented mod detection

--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ wayland_scanner = dependency('wayland-scanner', native : true)
 wlroots = wlroots_subproject.get_variable('wlroots')
 xcb = dependency('xcb')
 xkbcommon = dependency('xkbcommon')
+zip = dependency('libzip')
 
 cc = meson.get_compiler('c')
 if get_option('buildtype').startswith('debug')
@@ -82,5 +83,6 @@ executable('waywall',
     wayland_server,
     xcb,
     xkbcommon,
+    zip,
   ],
 )
