waywall: add background color configuration

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ repeat_rate = 40
 # TODO: language
 
 [appearance]
-# TODO: background color
+background_color = '#000000'
 # TODO: cursor theme
 # TODO: cursor size
 
