waywall: allow configuring unlock behavior
Provides three options (remain locked, unlock, or reset.) Pretty self explanatory.

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ use_f1 = false
 
 [reset]
 # TODO: reset counter path
-# TODO: reset on unlock
+unlock_behavior = "reset" # ignore, unlock, reset
 # TODO: wall bypass
 # TODO: grace period
 
