--- a/config.toml
+++ b/config.toml
@@ -21,8 +21,9 @@ stretch_height = 360
 use_f1 = false
 
 [reset]
-# TODO: reset counter path
 unlock_behavior = "reset" # ignore, unlock, reset
+count_resets = false
+resets_file = "/home/user/resets.txt"
 # TODO: wall bypass
 # TODO: grace period
 
