waywall: implement cursor configuration
Need to figure out how to update the cursor theme later on. Not interested in this at the moment but it's another TODO now

--- a/config.toml
+++ b/config.toml
@@ -8,8 +8,8 @@ confine_pointer = false
 [appearance]
 background_color = '#000000'
 lock_color = '#00000099'
-# TODO: cursor theme
-# TODO: cursor size
+cursor_theme = "" # can be left empty / deleted
+cursor_size = 24 # can be deleted
 
 [wall]
 wall_width = 2
