compositor: overhaul stop logic
Added configuration option to keep waywall and all of its Minecraft
instances running in the background even when the window is closed.

Added ability to recreate the main window by sending SIGUSR1.

Attempt to close all windows before shutting down to avoid instances
""crashing"" when waywall is stopped.

Ignore pointer constraints while there is no Wayland output. This also
fixes a use-after-free that was previously solved by a check for the
compositor shutting down.

--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ stretch_height = 360
 # TODO: alt width
 # TODO: alt height
 use_f1 = false
+remain_in_background = true
 
 [reset]
 unlock_behavior = "reset" # unlock, remain_locked, reset
