--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,7 @@ endforeach
 
 executable('waywall',
   wl_proto_src, wl_proto_header,
+  'cfs.c', 'cfs.h',
   'compositor.c', 'compositor.h',
   'config.c', 'config.h',
   'instance.c', 'instance.h',
