waywall: add sleepbg.lock support

--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,7 @@ low_cpu = 20
 high_cpu = 100
 active_cpu = 500
 preview_threshold = 30
+sleepbg_lock = ""
 
 [keybinds]
 "Ctrl-Shift-D"      = ["wall_reset_all", "ingame_reset"]
