compositor/scene_window: reimplement wlr_scene_surface with patches
This allows for getting rid of the nasty wlroots patches. Copy pasting 250 LoC with a few small changes isn't ideal but it's better than forcibly patching wlroots.

--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ executable('waywall',
   'config.c', 'config.h',
   'cpu.c', 'cpu.h',
   'instance.c', 'instance.h',
+  'scene_window.c', 'scene_window.h',
   'util.c', 'util.h',
   'waywall.c',
 
