--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -5,6 +5,7 @@ executable('waywall',
   'config.c',
   'cpu.c',
   'instance.c',
+  'reset_counter.c',
   'scene_window.c',
   'util.c',
   'waywall.c',
