compositor: create compositor subdirectory
The compositor module is quickly becoming the most complicated of the few, so I'd like to refactor it quite a bit and split the code for handling various functionalities into their own modules.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,7 +1,7 @@
 executable('waywall',
   protocol_sources, protocol_headers,
 
-  'compositor.c',
+  'compositor/compositor.c',
   'config.c',
   'cpu.c',
   'instance.c',
