compositor: refactor, split into submodules
Oops! Big changeset. Very little change to the actual functionality of
waywall, basically just big refactor.

- Made the compositor module an entire directory
- Split compositor into several submodules

Additional TODOs:
- Add events for request_configure, request_minimize for better
  Ninjabrain Bot support
- Fix small miscellaneous cursor bugs
- Unfortunately, Ninjabrain Bot's settings window still does not
  reappear after being closed and reopened

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -2,7 +2,12 @@ executable('waywall',
   protocol_sources, protocol_headers,
 
   'compositor/compositor.c',
+  'compositor/hview.c',
+  'compositor/input.c',
+  'compositor/render.c',
   'compositor/scene_window.c',
+  'compositor/xwayland.c',
+  'compositor/window_util.c',
 
   'config.c',
   'cpu.c',
