--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,3 +1,21 @@
+lua = [
+  'builtin_wall.lua',
+  'layout.lua',
+]
+
+lua_targets = []
+
+foreach lua_file : lua
+  lua_targets += custom_target(
+    lua_file,
+    input : lua_file,
+    output : '@PLAINNAME@.o',
+    command : [ luajit_program, '-b', '-g', '@INPUT@', '@OUTPUT@' ],
+  )
+endforeach
+
+lua_lib = static_library('waywall-lua', lua_targets)
+
 executable('waywall',
   protocol_sources, protocol_headers,
 
@@ -12,6 +30,7 @@ executable('waywall',
   'config.c',
   'cpu.c',
   'instance.c',
+  'layout.c',
   'ninb.c',
   'reset_counter.c',
   'util.c',
@@ -19,6 +38,7 @@ executable('waywall',
   'waywall.c',
 
   dependencies : [
+    luajit,
     toml,
     wlroots,
     wayland_client,
@@ -27,6 +47,11 @@ executable('waywall',
     xkbcommon,
     zip,
   ],
-
+  link_args : [
+    '-Wl,-E',
+  ],
+  link_whole : [
+    lua_lib,
+  ],
   include_directories : includes,
 )
