--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,6 +1,12 @@
 executable('waywall',
+  'server/server.c',
   'main.c',
   'util.c',
+
+  dependencies: [
+    wayland_client,
+    wayland_server,
+  ],
 
   include_directories: includes,
 )
