meson: add protocol dir
At some point, this will probaly house some custom protocols intended for IPC use. For now, it is only used to generate the code for existing wayland protocols.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -6,6 +6,9 @@ executable('waywall',
   'main.c',
   'util.c',
 
+  protocol_headers,
+  protocol_sources,
+
   dependencies: [
     wayland_client,
     wayland_server,
