--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,9 @@ add_project_arguments(
 includes = include_directories('include')
 
 wayland_client = dependency('wayland-client')
+wayland_protocols = dependency('wayland-protocols')
+wayland_scanner = dependency('wayland-scanner')
 wayland_server = dependency('wayland-server')
 
+subdir('protocol')
 subdir('waywall')
