server: provide zwp_linux_dmabuf_v1 global
`zwp_linux_dmabuf_v1` is another buffer factory, primarily used by Mesa
for hardware accelerated contexts (and thus used by Minecraft via
OpenGL.) A few things of note:

When created, `server_linux_buffer_params` owns the DMABUF data and
associated file descriptors. If `destroy` is called before a successful
`create` or `create_immed`, it is responsible for freeing the DMABUF
data and closing the file descriptors. If a buffer is successfully
created, ownership of the data and FDs is transferred to it.

The `ok` field of `server_linux_buffer_params` is used as a way to pass
back information from the `created` and `failed` events. The event
handlers do virtually no work and instead delegate it to the
implementations of `create` and `create_immed`.

I believe calling `wl_display_roundtrip` is absolutely needed in the
case of `create_immed`, since the client can assume that everything is
fine and they have received a valid buffer so long as they do not
receive a `failed` event. Thus, we need to send it back to them quickly.
However, I'm not so sure about calling it in the implementation for
`create`. In any event, I would like to eventually figure out how event
queues work and use those instead, since roundtripping the entire
display is suboptimal.

There are a lot of ways for `create` and `create_immed` to fail and
yield protocol errors, but they are too onerous to bother checking. If
Mesa fails, too bad.

Similarly to wl_shm, I'm not sure if retaining the buffer information
(other than size) has much use. It may not be necessary for waywall to
provide any recording functionality now that wall recordings are no
longer required.

--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -7,7 +7,9 @@ wayland_protocols_dir = wayland_protocols.get_variable('pkgdatadir') + '/'
 protocol_headers = []
 protocol_sources = []
 
-protocol_xmls = []
+protocol_xmls = [
+  'stable/linux-dmabuf/linux-dmabuf-v1.xml',
+]
 
 foreach xml : protocol_xmls
   protocol_headers += custom_target(
