test: add unit test for serial_ring
I don't know how many unit tests I'll want to write (or will be feasible to write), but it can't hurt to have them.

--- a/meson.build
+++ b/meson.build
@@ -23,4 +23,5 @@ wayland_scanner = dependency('wayland-scanner')
 wayland_server = dependency('wayland-server')
 
 subdir('protocol')
+subdir('test')
 subdir('waywall')
