server: provide xdg_wm_base global
There isn't much of interest to comment on in this commit. There will need to be some more events created later to allow for other parts of the codebase to actually make use of the information coming from XDG shell.

--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -9,6 +9,7 @@ protocol_sources = []
 
 protocol_xmls = [
   'stable/linux-dmabuf/linux-dmabuf-v1.xml',
+  'stable/xdg-shell/xdg-shell.xml',
 ]
 
 foreach xml : protocol_xmls
