server: provide zxdg_decoration_manager global
I'm not sure if this is implemented correctly, but I'll find out eventually. This just needs to be here so that GLFW does not try to create client side decorations.

--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -10,6 +10,7 @@ protocol_sources = []
 protocol_xmls = [
   'stable/linux-dmabuf/linux-dmabuf-v1.xml',
   'stable/xdg-shell/xdg-shell.xml',
+  'unstable/xdg-decoration/xdg-decoration-unstable-v1.xml',
 ]
 
 foreach xml : protocol_xmls
