--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -4,6 +4,7 @@ executable('waywall',
   'server/wl_compositor.c',
   'server/wl_shm.c',
   'server/wp_linux_dmabuf.c',
+  'server/xdg_decoration.c',
   'server/xdg_shell.c',
   'main.c',
   'util.c',
