server: add remote buffer management
Currently, this only supports RGBA colors. Later, it will be used for
storing entire images (e.g. cursors), at which point it will probably
need a more effective allocator than just a bump allocator.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,5 +1,6 @@
 executable('waywall',
   'server/buffer.c',
+  'server/remote_buffer.c',
   'server/server.c',
   'server/wl_compositor.c',
   'server/wl_shm.c',
