--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -2,6 +2,7 @@ executable('waywall',
   'server/buffer.c',
   'server/remote_buffer.c',
   'server/server.c',
+  'server/ui.c',
   'server/wl_compositor.c',
   'server/wl_shm.c',
   'server/wp_linux_dmabuf.c',
