--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -4,6 +4,7 @@ executable('waywall',
   'server/server.c',
   'server/ui.c',
   'server/wl_compositor.c',
+  'server/wl_seat.c',
   'server/wl_shm.c',
   'server/wp_linux_dmabuf.c',
   'server/xdg_decoration.c',
