server: provide zwp_relative_pointer_manager global
As I said in the previous commit message (9779b34), I'm not very happy
with the logic for sharing seat-related objects between modules.
Otherwise, this is a pretty simple protocol to implement and this should
work fine.

--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -11,6 +11,7 @@ protocol_xmls = [
   'stable/linux-dmabuf/linux-dmabuf-v1.xml',
   'stable/viewporter/viewporter.xml',
   'stable/xdg-shell/xdg-shell.xml',
+  'unstable/relative-pointer/relative-pointer-unstable-v1.xml',
   'unstable/xdg-decoration/xdg-decoration-unstable-v1.xml',
 ]
 
