--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -7,6 +7,7 @@ executable('waywall',
   'server/wl_seat.c',
   'server/wl_shm.c',
   'server/wp_linux_dmabuf.c',
+  'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
   'main.c',
