--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -6,6 +6,7 @@ executable('waywall',
   'server/wl_compositor.c',
   'server/wl_seat.c',
   'server/wl_shm.c',
+  'server/wp_pointer_constraints.c',
   'server/wp_linux_dmabuf.c',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
