--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -12,9 +12,10 @@ executable('waywall',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
-  'main.c',
+  'config.c',
   'inotify.c',
   'instance.c',
+  'main.c',
   'util.c',
   'wall.c',
 
@@ -23,6 +24,7 @@ executable('waywall',
 
   dependencies: [
     libzip,
+    luajit,
     wayland_client,
     wayland_cursor,
     wayland_server,
