config: add lua init chunk
Initially, I was hoping to make it so that users could change their
configuration at runtime by simply setting the values in the
configuration table.

Unfortunately, it seems like trying to rig that up with metatables is
too complicated to be really worth doing (and always getting the values
from the Lua table is obviously not very fast or simple either.)
Instead, I think it makes sense to have users return a configuration
table and then provide them with functions to modify certain important
values (e.g. mouse sensitivity) at runtime.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,3 +1,10 @@
+init_lua = custom_target(
+  'init.lua',
+  input: 'init.lua',
+  output: '@PLAINNAME@.h',
+  command: [find_program('luajit'), '-b', '@INPUT@', '@OUTPUT@'],
+)
+
 executable('waywall',
   'server/buffer.c',
   'server/cursor.c',
@@ -21,6 +28,7 @@ executable('waywall',
 
   protocol_headers,
   protocol_sources,
+  init_lua,
 
   dependencies: [
     libm,
