--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -21,6 +21,7 @@ executable('waywall',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
   'config.c',
+  'counter.c',
   'inotify.c',
   'instance.c',
   'main.c',
