config: split config into submodules
The Lua API is only going to continue to grow and I don't want to deal
with a bunch of complex, vaguely related functionality in one several
thousand line long file.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -6,6 +6,10 @@ init_lua = custom_target(
 )
 
 executable('waywall',
+  'config/action.c',
+  'config/api.c',
+  'config/config.c',
+  'config/internal.c',
   'server/backend.c',
   'server/buffer.c',
   'server/cursor.c',
@@ -20,7 +24,6 @@ executable('waywall',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
-  'config.c',
   'counter.c',
   'inotify.c',
   'instance.c',
