--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -5,6 +5,7 @@ executable('waywall',
   'config/api.c',
   'config/config.c',
   'config/internal.c',
+  'config/layout.c',
   'server/backend.c',
   'server/buffer.c',
   'server/cursor.c',
