--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -6,6 +6,7 @@ executable('waywall',
   'config/config.c',
   'config/internal.c',
   'config/layout.c',
+  'cpu/cgroup.c',
   'cpu/cgroup_setup.c',
   'server/backend.c',
   'server/buffer.c',
