server: provide wl_data_device_manager global
Currently, the clipboard only works within a single instance and the
content disappears once the instance loses focus(?). After that is
fixed, this will have to integrate with the clipboard from the remote
compositor... not looking forward to that.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -15,6 +15,7 @@ executable('waywall',
   'server/server.c',
   'server/ui.c',
   'server/wl_compositor.c',
+  'server/wl_data_device_manager.c',
   'server/wl_seat.c',
   'server/wl_shm.c',
   'server/wp_pointer_constraints.c',
