treewide/util: split up util
There will be more code coming to the util module, so I would like it to
be a bit more split up. I would also like to move some of the server
utilities in here (like box).

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -24,11 +24,12 @@ executable('waywall',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
+  'util/log.c',
+  'util/prelude.c',
   'counter.c',
   'inotify.c',
   'instance.c',
   'main.c',
-  'util.c',
   'wall.c',
 
   protocol_headers,
