server: move utils (box, serial) to util module

--- a/test/meson.build
+++ b/test/meson.build
@@ -4,7 +4,7 @@ test_sources = [
 ]
 
 test(
-  'server/inotify.c',
+  'inotify.c',
   executable('inotify',
     '../waywall/inotify.c',
     'inotify.c',
@@ -14,4 +14,4 @@ test(
     include_directories: [includes],
   ),
 )
-test('server/serial.h', executable('serial', 'serial.c', test_sources, include_directories: [includes]))
+test('util/serial.h', executable('serial', 'serial.c', test_sources, include_directories: [includes]))
