--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -26,6 +26,7 @@ executable('waywall',
   'server/xdg_shell.c',
   'util/log.c',
   'util/prelude.c',
+  'util/str.c',
   'counter.c',
   'inotify.c',
   'instance.c',
