main: split main into separate command files

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -27,6 +27,8 @@ executable('waywall',
   'util/log.c',
   'util/prelude.c',
   'util/str.c',
+  'cmd_cpu.c',
+  'cmd_main.c',
   'counter.c',
   'inotify.c',
   'instance.c',
