tools/waywall-launch: merge with main program
There's not much good reason to keep these separate? So they just won't
be.

This will also make it easier to implement logic for launching waywall
to wrap a single Minecraft instance in the future.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -28,6 +28,7 @@ executable('waywall',
   'util/prelude.c',
   'util/str.c',
   'cmd_cpu.c',
+  'cmd_exec.c',
   'cmd_main.c',
   'counter.c',
   'inotify.c',
