util: add syscall module
glibc does not provide wrappers for certain Linux syscalls (and some
require annoying defines, e.g. memfd_create). For now, this only
contains an implementation for memfd_create. In the future, there will
probably be more (capabilities, pidfd, etc).

I don't think I'm doing anything egregiously wrong with syscall() since
it seems to be working (but I am on a 64 bit system and I didn't read
the whole manpage, so...)

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -27,6 +27,7 @@ executable('waywall',
   'util/log.c',
   'util/prelude.c',
   'util/str.c',
+  'util/syscall.c',
   'cmd_cpu.c',
   'cmd_exec.c',
   'cmd_main.c',
