cmd/config/main: force `waywall run`, add profiles
With more complicated argument parsing, having `run` as an explicit
subcommand simplifies things and makes it easier to tell what is going
on.

Profiles have been added to allow the user to load one of several Lua
configurations should they choose to. By default, the `init.lua` file is
still loaded. The user can supply `--profile PROFILE` to load
`PROFILE.lua` instead.

Additionally, the `waywall.profile` function is now provided by the Lua
API.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -30,7 +30,7 @@ executable('waywall',
   'util/syscall.c',
   'cmd_cpu.c',
   'cmd_exec.c',
-  'cmd_main.c',
+  'cmd_run.c',
   'counter.c',
   'inotify.c',
   'instance.c',
