--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -17,6 +17,7 @@ executable('waywall',
   'server/ui.c',
   'server/wl_compositor.c',
   'server/wl_data_device_manager.c',
+  'server/wl_output.c',
   'server/wl_seat.c',
   'server/wl_shm.c',
   'server/wp_pointer_constraints.c',
