meson: add xcb, xwayland deps

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -53,6 +53,9 @@ executable('waywall',
     wayland_cursor,
     wayland_server,
     xkbcommon,
+
+    xcb,
+    xwayland,
   ],
 
   include_directories: includes,
