server/xwayland: launch Xwayland process
I don't really know what I'm doing, but it works. I'm sure this code is
an absolute disaster and will undergo at least one full rewrite before
it's acceptable, but it's a start.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -29,6 +29,8 @@ executable('waywall',
   'util/prelude.c',
   'util/str.c',
   'util/syscall.c',
+  'xwayland/xserver.c',
+  'xwayland/xwayland.c',
   'cmd_cpu.c',
   'cmd_exec.c',
   'cmd_run.c',
