server/xwayland: move xwayland code to server
It doesn't really make much sense to have this in a separate module, especially considering it is very much part of the compositor functionality.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -25,12 +25,12 @@ executable('waywall',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
+  'server/xserver.c',
+  'server/xwayland.c',
   'util/log.c',
   'util/prelude.c',
   'util/str.c',
   'util/syscall.c',
-  'xwayland/xserver.c',
-  'xwayland/xwayland.c',
   'cmd_cpu.c',
   'cmd_exec.c',
   'cmd_run.c',
